--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -8,7 +8,7 @@
 .background {
     background: linear-gradient(40deg,#1F1C2C,transparent 100%),
                 linear-gradient(230deg, #928DAB, transparent),
-                #ffa949 url('../../static/img/bg.jpg') center;
+                #ffa949 url('../../../static/img/bg.jpg') center;
     background-size: cover; 
     height: calc(100vh - 10px);
     width: calc(100vw - 10px);
@@ -16,7 +16,7 @@
 }
 
 .container {
-    overflow: auto;
+    overflow-y: auto;
     padding: 20px;
     height: calc(100% - 30px);
     width: calc(100% - 20px);
@@ -110,3 +110,55 @@
 									   color-stop(0.86, #747281));
 }
 
+.nav {
+    display: flex;
+    overflow: hidden;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+.menu {
+    width: 40px;
+    height: 40px;
+    order: 1;
+}
+
+.one, .two, .three {
+    width: 100%;
+    height: 5px;
+    margin-top: 5px;
+    background-color: white;
+    transition: all 0.1s ease;
+}
+
+
+.on .one {
+    transform: rotate(45deg) translate(7px,7px);
+}
+
+.on .two {
+    opacity: 0;
+}
+
+.on .three {
+    transform: rotate(-45deg) translate(8px,-8px);
+}
+
+.mainNav {
+    display: flex;
+    color: white; 
+    font-family: 'Signika', sans-serif;
+    font-size: 24px;
+    margin: 5px;
+    transform: translateX(200%);
+    transition: transform 0.1s ease-out;
+}
+
+.shownav {
+    transform: translateX(0%);
+}
+
+.mainNav li {
+    margin-right: 25px;
+    list-style: none;
+}
