--- a/src/containers/Contact/contact.css
+++ b/src/containers/Contact/contact.css
@@ -7,10 +7,10 @@
 .background {
     background: linear-gradient(40deg,#1F1C2C,transparent 100%),
                 linear-gradient(230deg, #928DAB, transparent),
-                #ffa949 url('http://res.cloudinary.com/www-rohanm-com/image/upload/v1489134166/bgcontact_bigclr.jpg') center;
+                #ffa949 url('http://res.cloudinary.com/www-rohanm-com/image/upload/c_scale,q_auto:low,w_1371/v1489134166/bgcontact_bigclr.jpg') center;
     background-size: cover; 
-    height: calc(100vh - 10px);
-    width: calc(100vw - 10px);
+    height: calc(100vh);
+    width: calc(100vw);
     border: 10px solid white;
     transition: filter 1s ease;
 }
@@ -18,7 +18,7 @@
 .container {
     overflow-y: auto;
     padding: 20px;
-    height: calc(100% - 30px);
+    height: calc(100% - 20px);
     width: calc(100% - 20px);
     position: fixed;
     top: 10px;
@@ -61,17 +61,16 @@
 }
 
 
-
 .container::-webkit-scrollbar-track
 {
 	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 .container::-webkit-scrollbar
 {
-	width: 10px;
+	width: 8px;
 	background-color: #F5F5F5;
 }
 
@@ -85,6 +84,3 @@
 									   color-stop(0.72, #565462),
 									   color-stop(0.86, #747281));
 }
-
-
-
