--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -8,17 +8,17 @@
 .background {
     background: linear-gradient(40deg,#1F1C2C,transparent 100%),
                 linear-gradient(230deg, #928DAB, transparent),
-                #ffa949 url('http://res.cloudinary.com/www-rohanm-com/image/upload/v1489134157/bg_q27nqt.jpg') center;
+                #ffa949 url('http://res.cloudinary.com/www-rohanm-com/image/upload/c_scale,q_auto:eco,w_1346/v1489134157/bg_q27nqt.jpg') center;
     background-size: cover; 
-    height: calc(100vh - 10px);
-    width: calc(100vw - 10px);
+    height: calc(100vh);
+    width: calc(100vw);
     border: 10px solid white;
 }
 
 .container {
     overflow-y: auto;
     padding: 20px;
-    height: calc(100% - 30px);
+    height: calc(100% - 20px);
     width: calc(100% - 20px);
     position: fixed;
     top: 10px;
@@ -90,12 +90,12 @@
 {
 	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 .container::-webkit-scrollbar
 {
-	width: 10px;
+	width: 8px;
 	background-color: #F5F5F5;
 }
 
